--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.17/dist/js/uikit.min.js"></script>
   <!-- Custom CSS & JS -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/responsive-mobile.css">
+  <link rel="stylesheet" href="css/responsive-tablet.css">
   <link rel="stylesheet" href="css/mobile-mockup.css">
   <script src="js/custom.js"></script>
 </head>
@@ -188,6 +189,17 @@
                 </span>
                 <p>
                   전체적인 UI 디자인, 스타일 가이드, 와이어프레임 제작은 Figma를 활용하며, 웹 사이트의 로고, 배너제작 등은 포토샵을 사용해서 주로 제작합니다.
+                </p>
+              </div>
+            </div>
+            <div class="skill-items">
+              <div class="skill-item">
+                <span class="initial">
+                  <em>Git</em>
+                  <b>GitHub</b>
+                </span>
+                <p>
+                  개인 프로젝트와 학습내용들의 버전관리와 백업, 팀 프로젝트의 협업을 위해 GitHub을 사용한 경험이 있습니다. 프로젝트들의 코드들은 GitHub 리포지토리에서 확인이 가능합니다.
                 </p>
               </div>
             </div>
