--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                 <div class="email">
                   <span><em>Email:</em>suntyru@gmail.com</span>
                 </div>
+                <div class="github">
+                  <a href="https://github.com/SweetBreadMan" target='_blank'>
+                    <img src="images/github-logo.png">
+                  </a>
+                </div>
               </div>
             </div>
             <div class="about-photo">
@@ -175,6 +180,15 @@
               </div>
               <div class="skill-item">
                 <span class="initial">
+                  <em>Git</em>
+                  <b>GitHub</b>
+                </span>
+                <p>
+                  개인 프로젝트와 학습내용들의 버전관리와 백업, 팀 프로젝트의 협업을 위해 GitHub을 사용한 경험이 있습니다. 프로젝트들의 코드들은 GitHub 리포지토리에서 확인이 가능합니다.
+                </p>
+              </div>
+              <div class="skill-item">
+                <span class="initial">
                   <em>TX</em>
                   <b>Text Editor</b>
                 </span>
@@ -182,6 +196,8 @@
                   메인 에디터로 VS Code를 사용하여 전체적인 퍼블리싱 작업을 하며, 서브 에디터로 Brackets, NotePad++를 사용해서 부분적인 작업 및 수정을 합니다.
                 </p>
               </div>
+            </div>
+            <div class="skill-items">
               <div class="skill-item">
                 <span class="initial">
                   <em>GT</em>
@@ -189,17 +205,6 @@
                 </span>
                 <p>
                   전체적인 UI 디자인, 스타일 가이드, 와이어프레임 제작은 Figma를 활용하며, 웹 사이트의 로고, 배너제작 등은 포토샵을 사용해서 주로 제작합니다.
-                </p>
-              </div>
-            </div>
-            <div class="skill-items">
-              <div class="skill-item">
-                <span class="initial">
-                  <em>Git</em>
-                  <b>GitHub</b>
-                </span>
-                <p>
-                  개인 프로젝트와 학습내용들의 버전관리와 백업, 팀 프로젝트의 협업을 위해 GitHub을 사용한 경험이 있습니다. 프로젝트들의 코드들은 GitHub 리포지토리에서 확인이 가능합니다.
                 </p>
               </div>
             </div>
@@ -675,7 +680,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/jquery/01" data-type="iframe">
@@ -781,7 +786,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/prototype/01" data-type="iframe">
@@ -843,7 +848,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-grid uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/scss/01" data-type="iframe">
@@ -910,7 +915,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-grid uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/animation/01" data-type="iframe">
@@ -987,7 +992,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-grid uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/card-ui/01" data-type="iframe">
@@ -1079,7 +1084,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-grid uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/form/01" data-type="iframe">
@@ -1151,7 +1156,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-grid uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/hover/01" data-type="iframe">
@@ -1248,7 +1253,7 @@
                 <div class="uk-position-relative">
                   <div class="uk-slider-container uk-light">
                     <ul
-                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-4@m uk-grid uk-grid-small"
+                      class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid uk-grid-small"
                       uk-grid uk-lightbox>
                       <li>
                         <a href="portfolio/practical-coding/navigation/01" data-type="iframe">
