--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
               <label for="web-tab1">NGO</label>
               <label for="web-tab2">Company</label>
               <label for="web-tab3">Shopping Mall</label>
-              <label for="web-tab4">Renewal</label>
+              <label for="web-tab4">Request</label>
             </div>
             <div class="web-tabs">
               <!-- NGO Tab -->
@@ -423,7 +423,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">제작에 사용된 웹 스킬</b>
-                      <span>HTML, CSS, jQuery</span>
+                      <span>HTML, CSS, JS, jQuery</span>
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">레이아웃 제작 방식</b>
@@ -474,7 +474,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">제작에 사용된 웹 스킬</b>
-                      <span>HTML, CSS, jQuery</span>
+                      <span>HTML, CSS, JS, jQuery</span>
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">레이아웃 제작 방식</b>
@@ -525,7 +525,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">제작에 사용된 웹 스킬</b>
-                      <span>HTML, CSS, jQuery</span>
+                      <span>HTML, CSS, JS, jQuery</span>
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">레이아웃 제작 방식</b>
@@ -548,13 +548,13 @@
                   </div>
                 </div>
               </div>
-              <!-- Renewal Tab -->
-              <div class="web-tab renewal-tab">
+              <!-- Request Tab -->
+              <div class="web-tab request-tab">
                 <div class="photo">
                   <img src="images/website-04.png" alt="제이소방 웹사이트 썸네일">
                 </div>
                 <div class="detail">
-                  <h4>리뉴얼 반응형 웹사이트</h4>
+                  <h4>제작의뢰 반응형 웹사이트</h4>
                   <div class="web-info">
                     <div class="web-info-wrapper web-color-info">
                       <b class="sub-title">Color Theme</b>
@@ -574,7 +574,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">제작에 사용된 웹 스킬</b>
-                      <span>HTML, CSS, jQuery</span>
+                      <span>HTML, CSS, JS, jQuery</span>
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">레이아웃 제작 방식</b>
@@ -586,7 +586,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">참고사항</b>
-                      <span>기존 제이(J)소방 사이트에서 디자인 변경, 컨텐츠 추가, 수정의 의뢰를 받아서 전체적인 리뉴얼 작업을 진행했습니다.</span>
+                      <span>실제 운영되고 있는 제이(J)소방 사이트에서 디자인 변경, 컨텐츠 추가, 수정의 의뢰를 받아서 전체적인 리뉴얼 작업을 진행했습니다.</span>
                     </div>
                   </div>
                   <div class="web-buttons">
@@ -1378,6 +1378,6 @@
     </section>
   </div>
   <!-- Go To Top Button -->
-  <button class="gototop"><i class="bi bi-arrow-up"></i></button>
+  <button class="gototop"></button>
 </body>
 </html>
