--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   <b>Responsive Web</b>
                 </span>
                 <p>
-                  크로스브라우징을 위해 안정적인 기존 방식인 float, position, Media Query를 활용한 반응형 웹 제작 경험이 있습니다. 또한 상황에 따라 Flex, Grid 방식으로 반응형 웹 제작도 가능합니다.
+                  Media Query를 활용한 반응형 웹 제작 경험이 있습니다. 단순히 스마트폰과 태블릿에만 맞는 반응형 제작에 그치지 않고 여러 해상도에 따른 레이아웃 변경을 신경쓰며 제작을 하고 있습니다.
                 </p>
               </div>
               <div class="skill-item">
@@ -435,7 +435,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">참고사항</b>
-                      <span>슬라이더 플러그인을 제외한 모든 퍼블리싱 작업은 하드코딩으로 제작</span>
+                      <span>대부분의 해상도를 고려한 반응형 제작, 슬라이더 플러그인을 제외한 모든 퍼블리싱 작업은 하드코딩으로 제작</span>
                     </div>
                   </div>
                   <div class="web-buttons">
