--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">레이아웃 제작 방식</b>
-                      <span>Flex 기반의 레이아웃</span>
+                      <span>Flex, Grid 기반의 레이아웃</span>
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">제작 기간 및 참여도</b>
