--- a/portfolio/mobile-web/mobile-publishing/preloading.html
+++ b/portfolio/mobile-web/mobile-publishing/preloading.html
@@ -7,9 +7,13 @@
   <title>Welcome to Sweet Days</title>
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script defer src="js/custom.js"></script>
+  <!-- Slick Slider CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <!-- Custom CSS & JS -->
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/custom.js"></script>
 </head>
 <body>
   <div class="container preloading" onclick="location.href='html/front.html'">
