--- a/portfolio/mobile-web/mobile-publishing/html/search.html
+++ b/portfolio/mobile-web/mobile-publishing/html/search.html
@@ -7,13 +7,13 @@
   <title>Search - Sweet Days</title>
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <!-- Slick Slider -->
-  <script src="../js/slick/slick.js"></script>
-  <link rel="stylesheet" href="../js/slick/slick-theme.css">
-  <link rel="stylesheet" href="../js/slick/slick.css">
+  <!-- Slick Slider CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <!-- Custom CSS & JS -->
   <link rel="stylesheet" href="../css/style.css">
-  <script defer src="../js/custom.js"></script>
+  <script src="../js/custom.js"></script>
 </head>
 <body>
   <div class="container search">
