--- a/portfolio/mobile-web/mobile-publishing/html/cart.html
+++ b/portfolio/mobile-web/mobile-publishing/html/cart.html
@@ -36,7 +36,7 @@
               </div>
               <div class="cart-item-desc">
                 <div class="cart-item-thum">
-                  <img src="../images/hot-product-01.jpg">
+                  <img src="../images/hot-product-01.jpg" alt="수제 클래식 핑크 마카롱">
                 </div>
                 <div class="cart-item-info">
                   <s>15,000원</s>
@@ -65,7 +65,7 @@
               </div>
               <div class="cart-item-desc">
                 <div class="cart-item-thum">
-                  <img src="../images/hot-product-02.jpg">
+                  <img src="../images/hot-product-02.jpg" alt="용기에 담긴 카이막">
                 </div>
                 <div class="cart-item-info">
                   <s>22,500원</s>
@@ -108,7 +108,7 @@
           <span class="total-point">구매시 <em>160포인트</em> 적립</span>
         </div>
         <div class="cart-empty">
-          <img src="../images/empty.png">
+          <img src="../images/empty.png" alt="비어있는 상자와 파리 그림">
           <h3>장바구니가 비었습니다</h3>
         </div>
         <div class="btn-cart-order-wrapper">
