--- a/portfolio/mobile-web/mobile-publishing/html/detail.html
+++ b/portfolio/mobile-web/mobile-publishing/html/detail.html
@@ -24,16 +24,16 @@
       <div class="goods-detail-content">
         <div class="goods-detail-slider">
           <a href="#none">
-            <img src="../images/product-detail-01.jpg">
+            <img src="../images/product-detail-01.jpg" alt="접시 위에 놓인 꽃과 핑크 마카롱">
           </a>
           <a href="#none">
-            <img src="../images/product-detail-02.jpg">
+            <img src="../images/product-detail-02.jpg" alt="쌓여있는 5개의 마카롱">
           </a>
           <a href="#none">
-            <img src="../images/product-detail-03.jpg">
+            <img src="../images/product-detail-03.jpg" alt="일렬로 놓여있는 여러 색의 마카롱">
           </a>
           <a href="#none">
-            <img src="../images/product-detail-04.jpg">
+            <img src="../images/product-detail-04.jpg" alt="접시 위에 놓인 여러 색의 마카롱">
           </a>
         </div>
         <div class="goods-info">
@@ -88,7 +88,7 @@
                     <h3>쫀득함의 끝!</h3>
                   </div>
                   <div class="goods-desc-item-img">
-                    <img src="../images/product-desc-main.jpg">
+                    <img src="../images/product-desc-main.jpg" alt="블루베리와 뚱카롱">
                   </div>
                 </div>
                 <div class="goods-desc-item">
@@ -102,7 +102,7 @@
                 </div>
                 <div class="goods-desc-item">
                   <div class="goods-desc-item-img">
-                    <img src="../images/product-detail-01.jpg">
+                    <img src="../images/product-detail-01.jpg" alt="접시 위에 놓인 꽃과 핑크 마카롱">
                   </div>
                 </div>
                 <div class="goods-desc-item">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="goods-desc-item">
                 <div class="goods-desc-item-img">
-                  <img src="../images/product-detail-02.jpg">
+                  <img src="../images/product-detail-02.jpg" alt="일렬로 놓여있는 여러 색의 마카롱">
                 </div>
                 </div>
                 <div class="goods-desc-item">
@@ -131,7 +131,7 @@
                 </div>
                 <div class="goods-desc-item">
                 <div class="goods-desc-item-img">
-                  <img src="../images/product-detail-03.jpg">
+                  <img src="../images/product-detail-03.jpg" alt="일렬로 놓여있는 여러 색의 마카롱">
                 </div>
                 </div>
                 <div class="goods-desc-item">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="goods-desc-item">
                 <div class="goods-desc-item-img">
-                  <img src="../images/product-detail-04.jpg">
+                  <img src="../images/product-detail-04.jpg" alt="접시 위에 놓인 여러 색의 마카롱">
                 </div>
                 </div>
               </div>
