--- a/portfolio/mobile-web/mobile-publishing/html/mypage.html
+++ b/portfolio/mobile-web/mobile-publishing/html/mypage.html
@@ -31,30 +31,30 @@
             <h4>비에젖은호빵<span> 님의 회원등급은<br><b>박력분</b>입니다</span></h4>
           </div>
           <div class="user-avatar">
-            <img src="../images/avatar.png">
+            <img src="../images/avatar.png" alt="프로필 사진">
           </div>
         </div>
         <div class="mypage-navigation">
           <div class="item">
-            <img src="../images/icons/truck.svg">
+            <img src="../images/icons/truck.svg" alt="트럭 아이콘">
             <span>배송정보 조회</span>
           </div>
           <div class="item">
-            <img src="../images/icons/gift.svg">
+            <img src="../images/icons/gift.svg" alt="선물 아이콘">
             <span>선물함</span>
           </div>
           <div class="item">
-            <img src="../images/icons/ticket-detailed.svg">
+            <img src="../images/icons/ticket-detailed.svg" alt="쿠폰 아이콘">
             <span>쿠폰함</span>
           </div>
           <div class="item">
-            <img src="../images/icons/headset.svg">
+            <img src="../images/icons/headset.svg" alt="해드셋 아이콘">
             <span>1:1 문의하기</span>
           </div>
         </div>
         <div class="banner">
           <a href="#none">
-            <img src="../images/mypage-event-banner-01.png">
+            <img src="../images/mypage-event-banner-01.png" alt="친구 초대하고 5,000포인트 받기">
           </a>
         </div>
         <div class="mypage-shortcut">
