--- a/portfolio/mobile-web/mobile-publishing/html/signin.html
+++ b/portfolio/mobile-web/mobile-publishing/html/signin.html
@@ -43,11 +43,11 @@
           <div class="sns-signin">
             <span>OR</span>
             <div>
-              <a href="#none"><img src="../images/sns-icon-01.svg"></a>
-              <a href="#none"><img src="../images/sns-icon-02.svg"></a>
-              <a href="#none"><img src="../images/sns-icon-03.svg"></a>
-              <a href="#none"><img src="../images/sns-icon-04.svg"></a>
-              <a href="#none"><img src="../images/sns-icon-05.svg"></a>
+              <a href="#none"><img src="../images/sns-icon-01.svg" alt="카카오톡"></a>
+              <a href="#none"><img src="../images/sns-icon-02.svg" alt="네이버"></a>
+              <a href="#none"><img src="../images/sns-icon-03.svg" alt="페이스북"></a>
+              <a href="#none"><img src="../images/sns-icon-04.svg" alt="구글"></a>
+              <a href="#none"><img src="../images/sns-icon-05.svg" alt="애플"></a>
             </div>
           </div>
           <div class="join-member">
