--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">참고사항</b>
-                      <span>대부분의 해상도를 고려한 반응형 제작, 슬라이더 플러그인을 제외한 모든 퍼블리싱 작업은 하드코딩으로 제작</span>
+                      <span>대부분의 해상도를 고려한 반응형, 인터랙티브 스크롤 이벤트 제작, 슬라이더 플러그인을 제외한 모든 작업은 직접 제작</span>
                     </div>
                   </div>
                   <div class="web-buttons">
@@ -537,7 +537,7 @@
                     </div>
                     <div class="web-info-wrapper">
                       <b class="sub-title">참고사항</b>
-                      <span>슬라이더, 카운트다운 플러그인을 제외한 모든 퍼블리싱 작업은 하드코딩으로 제작</span>
+                      <span>D-day 제작, 슬라이더 플러그인을 제외한 모든 작업은 직접 제작</span>
                     </div>
                   </div>
                   <div class="web-buttons">
