인터랙티브 효과 추가

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
     <section id="intro">
       <div class="intro-inner">
         <div class="intro-headline">
-          <h2>웹 퍼블리셔, 이선우</h2>
-          <h1>portfolio of sunwoo</h1>
-          <button href="#mobile-anchor" class="btn-view-project">view my project</button>
+          <h2>po<br>rt<br>fo<br>lio</h2>
+          <h3>
+            Web Publisher<br>
+            LEE SUNWOO
+          </h3>
         </div>
       </div>
       <button href="#about-anchor" class="btn-down">
@@ -77,7 +79,7 @@
             <h3>About Me</h3>
           </div>
           <div class="about-items">
-            <div class="about-detail">
+            <div class="about-detail fade">
               <h3>HELLO, I'M</h3>
               <h2>SunWoo Lee</h2>
               <p>
@@ -104,7 +106,7 @@
                 </div>
               </div>
             </div>
-            <div class="about-photo">
+            <div class="about-photo fade">
               <img src="images/profile-img.png" alt="프로필 사진">
             </div>
           </div>
@@ -121,7 +123,7 @@
             <h3>My Skills</h3>
           </div>
           <div class="skill-wrapper">
-            <div class="skill-items">
+            <div class="skill-items fade">
               <div class="skill-item">
                 <span class="initial">
                   <em>H5</em>
@@ -155,11 +157,11 @@
                   <b>JavaScript & jQuery</b>
                 </span>
                 <p>
-                  네비게이션, 탭 메뉴, 어코디언 등 웹 퍼블리싱에 필수적인 상호작용을 위한 제이쿼리 코드는 하드 코딩으로 제작합니다. 또한 자바스크립트에 학습을 계속해나가고 있습니다.
+                  네비게이션, 탭 메뉴, 어코디언 등 웹 퍼블리싱에 필수적인 상호작용을 위한 코드는 플러그인을 사용하지 않고 직접 제작하며, 인터랙티브 웹 제작에 관심이 있습니다.
                 </p>
               </div>
             </div>
-            <div class="skill-items">
+            <div class="skill-items fade">
               <div class="skill-item">
                 <span class="initial">
                   <em>RW</em>
@@ -197,7 +199,7 @@
                 </p>
               </div>
             </div>
-            <div class="skill-items">
+            <div class="skill-items fade">
               <div class="skill-item">
                 <span class="initial">
                   <em>GT</em>
@@ -222,16 +224,16 @@
             <h3>Education & License</h3>
           </div>
           <div class="education-items">
-            <div class="education-item">
+            <div class="education-item fade">
               <div class="education-date">
-                <span>2022.04 - 2023.05</span>
+                <span>2023.04 - 2023.06</span>
               </div>
               <div class="education-photo-detail">
                 <div class="photo">
                   <img src="images/education-01.png" alt="오프라인 수업을 듣는 중">
                 </div>
                 <div class="detail">
-                  <b>코딩웍스 온,오프라인 정규 과정(인프런)</b>
+                  <b>코딩웍스 오프라인 정규 과정(인프런)</b>
                   <em>HTML, CSS, SCSS, Javascript, jQuery, Responsive Web</em>
                   <p>
                     웹 퍼블리싱의 기본기가 되는 HTML, CSS, jQuery부터 Flex, Grid를 사용한 레이아웃 배치와 반응형 웹 사이트제작, SCSS, Javascript를 학습해오며 중상급 퍼블리셔를 목표로 학습해 왔으며, 앞으로 협업을 함에 있어서 누가봐도 한번에 이해가 되는 코드를 위해 클래스와 주석의 활용에 대해서 교육을 받아왔습니다.
@@ -239,7 +241,7 @@
                 </div>
               </div>
             </div>
-            <div class="education-item">
+            <div class="education-item fade">
               <div class="education-date">
                 <span>2020.12 - 2021.05</span>
               </div>
@@ -256,7 +258,7 @@
                 </div>
               </div>
             </div>
-            <div class="education-item">
+            <div class="education-item fade">
               <div class="education-date">
                 <span>2014.03 - 2021.02</span>
               </div>
